Update 1.convert the molecule's SMILES to a MOL file.ipynb
翻译该文件注释

--- a/code/1.convert the molecule's SMILES to a MOL file.ipynb
+++ b/code/1.convert the molecule's SMILES to a MOL file.ipynb
@@ -198,17 +198,17 @@
     "from rdkit.Chem import AllChem\n",
     "import os\n",
     "\n",
-    "# 一个包含smile分子结构式的列表\n",
+    "# A list containing SMILES molecular structures.\n",
     "smiles_list = sml\n",
     "\n",
-    "# 指定保存mol文件的目录\n",
+    "# Specify the MOL file save directory\n",
     "save_directory = r\"mol_file\"\n",
     "\n",
-    "# 如果目录不存在，则创建目录\n",
+    "# If the directory does not exist, create it.\n",
     "if not os.path.exists(save_directory):\n",
     "    os.makedirs(save_directory)\n",
     "\n",
-    "# 循环遍历smiles列表，将每个smile结构转换为mol文件并保存\n",
+    "# Loop through the SMILES list, convert each SMILES structure to a MOL file, and save it.\n",
     "for i, smile in enumerate(smiles_list):\n",
     "    try:\n",
     "        mol = Chem.MolFromSmiles(smile)\n",
