Update and rename 2.convert from MOL file to GJF file.ipynb to 2.convert from .mol file to .gjf file.ipynb
将注释翻译成英文

--- a/code/2.convert from .mol file to .gjf file.ipynb
+++ b/code/2.convert from .mol file to .gjf file.ipynb
@@ -29,32 +29,32 @@
     "from rdkit.Chem import AllChem\n",
     "import os\n",
     "\n",
-    "# 定义输入和输出文件夹路径:Rdkit使用的时候不能具备中文路径\n",
-    "input_folder = \"mol_file\" # 包含mol文件的文件夹路径\n",
-    "output_folder = \"gjf_opt\" # 存储gjf文件的文件夹路径\n",
+    "# Define the input and output folder paths.\n",
+    "input_folder = \"mol_file\" # The folder path containing the MOL files.\n",
+    "output_folder = \"gjf_opt\" # The folder path for storing GJF files.\n",
     "\n",
-    "# 获取mol文件夹中的所有mol文件，并按照文件名数字排序\n",
+    "# Get all MOL files in the MOL folder and sort them by numeric filename.\n",
     "mol_files = sorted([f for f in os.listdir(input_folder) if f.endswith('.mol')], key=lambda f: int(f.split('_')[1].split('.')[0]))\n",
     "\n",
     "\n",
-    "# 遍历mol文件夹中的所有文件\n",
+    "# Iterate through all files in the MOL folder.\n",
     "\n",
     "for filename in mol_files:\n",
-    "    if filename.endswith('.mol'):  # 确保只处理mol文件\n",
-    "        # 构建输入和输出文件的完整路径\n",
+    "    if filename.endswith('.mol'):  # Ensure that only MOL files are processed.\n",
+    "        # Construct the full paths for input and output files.\n",
     "        input_file = os.path.join(input_folder, filename)\n",
     "        output_file = os.path.join(output_folder, filename.replace('.mol', '.gjf'))\n",
     "\n",
-    "        # 读取mol文件\n",
+    "        # Read the MOL file.\n",
     "        mol = Chem.MolFromMolFile(input_file)\n",
     "\n",
-    "        # 生成gjf文件内容\n",
+    "        # Generate the content of the GJF file.\n",
     "        gjf_content = f'%chk={filename.replace(\".mol\", \".chk\")}\\n%mem=10GB\\n# opt b3lyp/6-31g(d)\\n\\nTitle\\n\\n0 1\\n'\n",
     "\n",
-    "        # 生成分子的三维构象\n",
-    "        mol = Chem.AddHs(mol)  # 添加氢原子\n",
-    "        AllChem.EmbedMolecule(mol)  # 生成初始构象\n",
-    "        AllChem.UFFOptimizeMolecule(mol)  # 进行力场优化\n",
+    "        # Generate the 3D conformation of the molecule.\n",
+    "        mol = Chem.AddHs(mol)  # Add hydrogen atoms.\n",
+    "        AllChem.EmbedMolecule(mol)  # Generate the initial conformation.\n",
+    "        AllChem.UFFOptimizeMolecule(mol)  # Perform force field optimization.\n",
     "\n",
     "        for atom in mol.GetAtoms():\n",
     "            atom_symbol = atom.GetSymbol()\n",
@@ -62,10 +62,10 @@
     "            atom_line = f'{atom_symbol:<3} {atom_coords.x:>10.6f} {atom_coords.y:>10.6f} {atom_coords.z:>10.6f}\\n'\n",
     "            gjf_content += atom_line\n",
     "\n",
-    "        # 写入gjf文件\n",
+    "        # Write to the GJF file.\n",
     "        with open(output_file, 'w') as f:\n",
     "            f.write(gjf_content)\n",
-    "            f.write('\\n')#添加一个空行\n",
+    "            f.write('\\n')\n",
     "\n",
     "        print(f'Converted {input_file} to {output_file}')\n",
     "\n",
