Update and rename 3.Convert a .log file to an ECD-compatible .gjf file.ipynb to 3.Convert a .log file to an ECD .gjf file.ipynb
将标题及注释翻译成英文

--- a/code/3.Convert a .log file to an ECD .gjf file.ipynb
+++ b/code/3.Convert a .log file to an ECD .gjf file.ipynb
@@ -37,11 +37,11 @@
    "source": [
     "import os\n",
     "\n",
-    "# 定义输入和输出文件夹路径\n",
-    "input_folder = \"opt_log\"# 存储高斯优化后的 log 文件的文件夹路径\n",
-    "output_folder = \"ecd_gjf\" # 存储生成的 gjf 文件的文件夹路径\n",
+    "# Define the input and output directory paths.\n",
+    "input_folder = \"opt_log\"# The directory path for storing Gaussian-optimized log files.\n",
+    "output_folder = \"ecd_gjf\" # The directory path for storing the generated GJF files.\n",
     "\n",
-    "# 元素符号和原子序号的映射关系\n",
+    "# The mapping between element symbols and atomic numbers.\n",
     "atomic_symbols = atomic_symbols = {\n",
     "    1: 'H', 2: 'He', 3: 'Li', 4: 'Be', 5: 'B', 6: 'C', 7: 'N', 8: 'O', 9: 'F', 10: 'Ne',\n",
     "    11: 'Na', 12: 'Mg', 13: 'Al', 14: 'Si', 15: 'P', 16: 'S', 17: 'Cl', 18: 'Ar', 19: 'K',\n",
@@ -54,28 +54,28 @@
     "    74: 'W', 75: 'Re', 76: 'Os', 77: 'Ir', 78: 'Pt', 79: 'Au', 80: 'Hg', 81: 'Tl', 82: 'Pb',\n",
     "    83: 'Bi', 84: 'Po', 85: 'At', 86: 'Rn', 87: 'Fr', 88: 'Ra', 89: 'Ac'}\n",
     "\n",
-    "# 确保输出文件夹存在\n",
+    "# Ensure the output folder exists.\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
-    "# 遍历 log 文件夹中的所有文件\n",
+    "# Iterate through all files in the log folder.\n",
     "for filename in os.listdir(input_folder):\n",
-    "    if filename.endswith('.log'):  # 确保只处理 log 文件\n",
-    "        # 构建输入和输出文件的完整路径\n",
+    "    if filename.endswith('.log'):  # Ensure that only log files are processed.\n",
+    "        # Construct the full paths for the input and output files.\n",
     "        input_file = os.path.join(input_folder, filename)\n",
     "        output_file = os.path.join(output_folder, filename.replace('.log', '_ECD.gjf'))\n",
     "\n",
-    "        # 读取 log 文件\n",
+    "        # Read the log file.\n",
     "        with open(input_file, 'r') as f:\n",
     "            log_lines = f.readlines()\n",
     "\n",
-    "        # 查找最后一个 \"Standard orientation:\" 的索引\n",
+    "        # Find the index of the last occurrence of 'Standard orientation:'.\n",
     "        last_occurrence_index = None\n",
     "        for i, line in enumerate(log_lines):\n",
     "            if line.strip() == 'Standard orientation:':\n",
     "                last_occurrence_index = i\n",
     "\n",
     "        if last_occurrence_index is not None:\n",
-    "            # 提取分子信息\n",
+    "            # Extract molecular information.\n",
     "            molecule_lines = log_lines[last_occurrence_index+5:]\n",
     "            molecule_info = ''\n",
     "\n",
@@ -88,21 +88,21 @@
     "                atom_line = f'{atom_num:<3} {x:>10} {y:>10} {z:>10}\\n'\n",
     "                molecule_info += atom_line\n",
     "\n",
-    "            # 删除 \"constants\" 行及其后面的内容\n",
+    "            # Delete the 'constants' line and everything after it.\n",
     "            if 'constants' in molecule_info:\n",
     "                constants_index = molecule_info.index('constants')\n",
     "                molecule_info = molecule_info[:constants_index]\n",
     "\n",
-    "            # 生成 gjf 文件内容\n",
+    "            # Generate the content of the .gjf file.\n",
     "            gjf_content = f'%chk={filename.replace(\".log\", \"_ECD.chk\")}\\n%mem=10GB\\n# td=(nstates=20,root=20) cam-b3lyp/6-31g(d)\\n\\nTitle\\n\\n0 1\\n{molecule_info}\\n\\n'\n",
     "\n",
-    "            # 写入 gjf 文件\n",
+    "            # Write to the .gjf file.\n",
     "            with open(output_file, 'w') as f:\n",
     "                f.write(gjf_content)\n",
     "\n",
     "            print(f'Generated {output_file}')\n",
     "\n",
-    "        # 读取生成的 gjf 文件并进行元素符号替换\n",
+    "        # Read the generated .gjf file and perform element symbol replacement.\n",
     "        with open(output_file, 'r') as f:\n",
     "            gjf_lines = f.readlines()\n",
     "\n",
@@ -115,11 +115,11 @@
     "            atom_num = int(parts[0])\n",
     "            atom_symbol = atomic_symbols.get(atom_num, '')\n",
     "\n",
-    "            # 生成修改后的 gjf 文件内容\n",
+    "            # Generate the modified .gjf file content.\n",
     "            modified_gjf_line = f' {atom_symbol:<3}                  {parts[1]:>10}   {parts[2]:>10}   {parts[3]:>10}\\n'\n",
     "            modified_gjf_lines.append(modified_gjf_line)\n",
     "\n",
-    "        # 写入修改后的 gjf 文件\n",
+    "        # Write the modified .gjf file.\n",
     "        with open(output_file, 'w') as f:\n",
     "            f.writelines(modified_gjf_lines)\n",
     "\n",
