Update and rename 4.Convert an ECD .log file into an ECD spectrum.ipynb to 4.convert an ECD .log file into an ECD spectrum.ipynb
将标题及注释翻译成英文

--- a/code/4.convert an ECD .log file into an ECD spectrum.ipynb
+++ b/code/4.convert an ECD .log file into an ECD spectrum.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#导入库\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re\n",
@@ -114,13 +114,13 @@
    ],
    "source": [
     "for i in range(1,10):\n",
-    "    #读取文件\n",
+    "    # Read the file.\n",
     "    with open('ecd_log\\\\molecule_'+str(i)+'_ECD.log', 'r') as f:\n",
     "        content = f.read()\n",
-    "    #采用正则表达式获取能量项\n",
+    "    # Use regular expressions to extract energy terms.\n",
     "    pattern_1 = r'\\d+\\.\\d+\\s+eV\\s+\\d+\\.\\d+\\s+nm\\s+f=\\d+\\.\\d+'\n",
     "    matches_1 = re.findall(pattern_1, content)\n",
-    "    #采用列表形式将关键信息进行存储\n",
+    "    # Store key information in the form of a list.\n",
     "    excitation_energies = []\n",
     "    wavelength_sum = []\n",
     "    #oscillator_strengths = []\n",
@@ -133,31 +133,31 @@
     "        excitation_energies.append(excitation_energy)\n",
     "        #oscillator_strengths.append(float(oscillator_strength.split('=')[1])) \n",
     "    \n",
-    "    #再次读取文件\n",
+    "    # Read the file again.\n",
     "    with open('ecd_log\\\\molecule_'+str(i)+'_ECD.log', 'r') as f:\n",
     "        lines = f.readlines()\n",
-    "    #采用正则表达式提取与ECD光谱生成相关的转子强度(速度表象) R(velocity)\n",
+    "    # Use regular expressions to extract rotatory strengths (in the velocity representation) related to ECD spectrum generation R(velocity).\n",
     "    pattern_2 = r'^\\s*(\\d+)\\s+([-+]?\\d+\\.\\d+)\\s+([-+]?\\d+\\.\\d+)\\s+([-+]?\\d+\\.\\d+)\\s+([-+]?\\d+\\.\\d+)\\s+([-+]?\\d+\\.\\d+)\\s*$'\n",
-    "    #采用列表形式存储转子强度:R_values[40:60]\n",
+    "    # Store the rotatory strengths in a list format:R_values[40:60].\n",
     "    R_values = []\n",
     "    for line in lines:\n",
     "        match = re.match(pattern_2, line)\n",
     "        if match:\n",
     "            R_value = float(match.group(5))\n",
     "            R_values.append(R_value)\n",
-    "    #根据抓取的能量以及转子强度进行高斯展宽\n",
+    "    # Perform Gaussian broadening based on the extracted energies and rotatory strengths.\n",
     "    excitation_energies = np.array(excitation_energies)\n",
     "    rotatory_strengths = np.array(R_values[40:60])\n",
     "    wavelength_sum = np.array(wavelength_sum)\n",
     "    #oscillator_strengths = np.array(oscillator_strengths)\n",
-    "    #定义波长范围为80-450\n",
+    "    # Define the wavelength range as 80-450.\n",
     "    excitation_energies_ext = np.concatenate([1240/np.array([15.5000]), 1240/excitation_energies, 1240/np.array([4.1333])])\n",
-    "    #插值等间距\n",
+    "    # Interpolate with equal spacing.\n",
     "    x_interp = np.linspace(80, 450, 800)\n",
-    "    #定义高斯函数\n",
+    "    # Define the Gaussian function.\n",
     "    def gaussian(x, center, width):\n",
     "        return np.exp(-(x-center)**2/(2*width**2))\n",
-    "    #进行各种参数带入，进行展宽\n",
+    "    # Substitute various parameters and perform broadening.\n",
     "    ecd_spectrum = np.zeros(len(x_interp))\n",
     "    for k in range(len(wavelength_sum)):\n",
     "        center = wavelength_sum[k]\n",
@@ -166,7 +166,7 @@
     "        gaussian_i = gaussian(x_interp, center, width)\n",
     "        #print(gaussian_i)\n",
     "        ecd_spectrum += amplitude * gaussian_i\n",
-    "    #绘图\n",
+    "    # Plot the graph.\n",
     "    plt.figure(figsize=(5, 3))\n",
     "    plt.plot(x_interp, ecd_spectrum)\n",
     "    plt.xlabel('Wavelength (nm)')\n",
