Update 1.convert the molecule's SMILES to a MOL file.ipynb

--- a/code/1.convert the molecule's SMILES to a MOL file.ipynb
+++ b/code/1.convert the molecule's SMILES to a MOL file.ipynb
@@ -7,9 +7,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    " Import libraries for data handling, molecule processing, and numerical operations.\n"
     "import pandas as pd\n",
     "from rdkit import Chem\n",
     "import numpy as np"
+    "import pandas as pd\n",
+    "from rdkit.Chem import AllChem\n",
+    "import os\n",
    ]
   },
   {
@@ -19,8 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# -*- coding: utf-8 -*-\n",
-    "import pandas as pd\n",
+    "# Read SMILES data from CSV file.\n",
     "data = pd.read_csv(\"test_natural_product_molecules.csv\")"
    ]
   },
@@ -183,6 +186,7 @@
     }
    ],
    "source": [
+    "# Select the first 10 SMILES strings from the dataset.\n",
     "sml = list(data['SMILES'][0:10])\n",
     "sml"
    ]
@@ -194,9 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rdkit import Chem\n",
-    "from rdkit.Chem import AllChem\n",
-    "import os\n",
+    "# Convert the selected SMILES strings to 3D MOL files and save them to the specified directory.\n"
     "\n",
     "# A list containing SMILES molecular structures.\n",
     "smiles_list = sml\n",
