--- a/code/1.convert the molecule's SMILES to a MOL file.ipynb
+++ b/code/1.convert the molecule's SMILES to a MOL file.ipynb
@@ -7,13 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " Import libraries for data handling, molecule processing, and numerical operations.\n"
+    "# Import libraries for data handling and molecular processing.\n"
     "import pandas as pd\n",
     "from rdkit import Chem\n",
     "import numpy as np"
-    "import pandas as pd\n",
-    "from rdkit.Chem import AllChem\n",
-    "import os\n",
    ]
   },
   {
@@ -23,7 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read SMILES data from CSV file.\n",
+    "# Read the CSV file containing SMILES strings and metadata.\n",
+    "import pandas as pd\n",
     "data = pd.read_csv(\"test_natural_product_molecules.csv\")"
    ]
   },
@@ -156,6 +154,7 @@
     }
    ],
    "source": [
+    "# Display the first few rows of the dataset.\n"
     "data"
    ]
   },
@@ -186,7 +185,7 @@
     }
    ],
    "source": [
-    "# Select the first 10 SMILES strings from the dataset.\n",
+    "# Extract the first 10 SMILES strings for further processing.\n"
     "sml = list(data['SMILES'][0:10])\n",
     "sml"
    ]
@@ -198,7 +197,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert the selected SMILES strings to 3D MOL files and save them to the specified directory.\n"
+    "# Convert SMILES strings to 3D MOL files and save them to the target folder.\n"
+    "from rdkit import Chem\n",
+    "from rdkit.Chem import AllChem\n",
+    "import os\n",
     "\n",
     "# A list containing SMILES molecular structures.\n",
     "smiles_list = sml\n",
