Update 1.convert the molecule's SMILES to a MOL file.ipynb

--- a/code/1.convert the molecule's SMILES to a MOL file.ipynb
+++ b/code/1.convert the molecule's SMILES to a MOL file.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import libraries for data handling and molecular processing.\n"
+    "# Import libraries for data handling and molecular processing.\n",
     "import pandas as pd\n",
     "from rdkit import Chem\n",
     "import numpy as np"
@@ -154,7 +154,7 @@
     }
    ],
    "source": [
-    "# Display the first few rows of the dataset.\n"
+    "# Display the first few rows of the dataset.\n",
     "data"
    ]
   },
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert SMILES strings to 3D MOL files and save them to the target folder.\n"
+    "# Convert SMILES strings to 3D MOL files and save them to the target folder.\n",
     "from rdkit import Chem\n",
     "from rdkit.Chem import AllChem\n",
     "import os\n",
