Update 1.convert the molecule's SMILES to a MOL file.ipynb

--- a/code/1.convert the molecule's SMILES to a MOL file.ipynb
+++ b/code/1.convert the molecule's SMILES to a MOL file.ipynb
@@ -185,7 +185,7 @@
     }
    ],
    "source": [
-    "# Extract the first 10 SMILES strings for further processing.\n"
+    "# Extract the first 10 SMILES strings for further processing.\n",
     "sml = list(data['SMILES'][0:10])\n",
     "sml"
    ]
