Update 2.convert from .mol file to .gjf file.ipynb

--- a/code/2.convert from .mol file to .gjf file.ipynb
+++ b/code/2.convert from .mol file to .gjf file.ipynb
@@ -1,14 +1,24 @@
-### Convert MOL files to Gaussian Input (GJF) Files
+{
+  "cell_type": "markdown",
+  "metadata": {},
+  "source": [
+    "### Convert MOL files to Gaussian Input (GJF) Files\n",
+    "\n",
+    "This section converts all `.mol` structure files into Gaussian input (`.gjf`) files using **RDKit**.  \n",
+    "The generated `.gjf` files are saved in the `gjf_opt/` directory and are ready for **geometry optimization** with Gaussian.\n",
+    "\n",
+    "#### Workflow Steps:\n",
+    "\n",
+    "1. Read each `.mol` file from the `mol_file/` directory  \n",
+    "2. Add hydrogen atoms  \n",
+    "3. Generate a 3D conformation  \n",
+    "4. Optimize the structure using the **UFF** force field  \n",
+    "5. Write atomic coordinates to a `.gjf` file with proper **Gaussian headers**\n",
+    "\n",
+    "> *Make sure the `gjf_opt/` folder exists before running the cell, or let the script create it automatically.*"
+  ]
+}
 
-This section converts all MOL structure files into Gaussian input (.gjf) files using RDKit.  
-The generated GJF files are saved in the `gjf_opt/` directory and are ready for geometry optimization with Gaussian.
-
-The main steps are:
-- Read each `.mol` file from the `mol_file/` directory
-- Add hydrogen atoms
-- Generate a 3D conformation
-- Optimize the structure using the UFF force field
-- Write atomic coordinates to a `.gjf` file with Gaussian headers
 
 {
  "cells": [
