Update 1.convert the molecule's SMILES to a MOL file.ipynb

--- a/code/1.convert the molecule's SMILES to a MOL file.ipynb
+++ b/code/1.convert the molecule's SMILES to a MOL file.ipynb
@@ -1,22 +1,22 @@
 {
  "cells": [
   {
-  "cell_type": "markdown",
-  "metadata": {},
-  "source": [
-    ### Convert SMILES to 3D MOL Files
-
-    This section loads a dataset of SMILES strings and converts them into 3D `.mol` structure files using RDKit.  
-    The main steps include:
-    
-    1. Importing necessary libraries (`pandas`, `rdkit`, etc.)
-    2. Reading SMILES strings from a CSV file
-    3. Extracting a subset of SMILES for demonstration
-    4. Converting each SMILES to a 3D molecule
-    5. Saving each molecule as a `.mol` file in the `mol_file/` directory
-    
-    > These `.mol` files will be used as input for generating Gaussian input files in the next step.
-    ]
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convert SMILES to 3D MOL Files\n",
+    "\n",
+    "This section loads a dataset of SMILES strings and converts them into 3D `.mol` structure files using RDKit.  \n",
+    "The main steps include:\n",
+    "\n",
+    "1. Importing necessary libraries (`pandas`, `rdkit`, etc.)  \n",
+    "2. Reading SMILES strings from a CSV file  \n",
+    "3. Extracting a subset of SMILES for demonstration  \n",
+    "4. Converting each SMILES to a 3D molecule  \n",
+    "5. Saving each molecule as a `.mol` file in the `mol_file/` directory  \n",
+    "\n",
+    "> These `.mol` files will be used as input for generating Gaussian input files in the next step."
+   ]
   },
   {
    "cell_type": "code",
