Update 3.convert a .log file to an ECD .gjf file.ipynb

--- a/code/3.convert a .log file to an ECD .gjf file.ipynb
+++ b/code/3.convert a .log file to an ECD .gjf file.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract Coordinates from Gaussian Logs and Generate ECD GJF Files\n",
+    "\n",
+    "This section processes Gaussian geometry optimization output (`.log`) files to generate new Gaussian input (`.gjf`) files for **Electronic Circular Dichroism (ECD)** calculations.  \n",
+    "The steps are as follows:\n",
+    "\n",
+    "1. Read `.log` files from the `opt_log/` directory\n",
+    "2. Extract atomic coordinates from the last \"Standard orientation\" block\n",
+    "3. Replace atomic numbers with element symbols using a predefined dictionary\n",
+    "4. Write the coordinates and Gaussian headers into a new `.gjf` file in the `ecd_gjf/` directory\n",
+    "\n",
+    "> Each `.gjf` file is formatted for TD-DFT ECD calculations with CAM-B3LYP/6-31G(d) and 20 excited states."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "ce12cc3b-a24c-46bb-a349-4bd7bb5b58b5",
