Update 4.convert an ECD .log file into an ECD spectrum.ipynb

--- a/code/4.convert an ECD .log file into an ECD spectrum.ipynb
+++ b/code/4.convert an ECD .log file into an ECD spectrum.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+  "cell_type": "markdown",
+  "metadata": {},
+  "source": [
+    "### Extract Coordinates from Gaussian Logs and Generate ECD GJF Files\n",
+    "\n",
+    "This section processes Gaussian optimization output files (`.log`) to generate Gaussian input files (`.gjf`) for **Electronic Circular Dichroism (ECD)** calculations.\n",
+    "\n",
+    "**Workflow Steps:**\n",
+    "1. Read `.log` files from the `opt_log/` directory\n",
+    "2. Extract atomic coordinates from the last \"Standard orientation\" block\n",
+    "3. Replace atomic numbers with element symbols (e.g., 6 → C)\n",
+    "4. Write properly formatted `.gjf` files with TD-DFT ECD calculation settings into the `ecd_gjf/` folder\n",
+    "\n",
+    "> These `.gjf` files use `CAM-B3LYP/6-31G(d)` level of theory and request 20 excited states using `td=(nstates=20, root=20)`."
+    ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2357fba1-1c3b-4816-9dbc-ccbc9c898c7b",
